Added support to run behind reverse proxies

--- a/clients/index.html
+++ b/clients/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Remote Control</title>
     <link rel="stylesheet" href="remote.css" type="text/css"/>
-    <script src="s/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script src="remote.js"></script>
 </head>
 <body>
