Fix rotation of buttons

--- a/remote/index.html
+++ b/remote/index.html
@@ -25,7 +25,7 @@
 		<div class="arrows">
 			<span>&nbsp;</span>
 			<a href="#" id="up" onclick="slideControl.up(); return false;">
-				<img src="arrow.svg" style="rotate: 180deg">
+				<img src="arrow.svg" style="transform: rotate(0.5turn)">
 			</a>
 			<span>&nbsp;</span>
 			<a href="#" id="next" onclick="slideControl.next(); return false;">
@@ -33,11 +33,11 @@
 			</a>
 
 			<a href="#" id="left" onclick="slideControl.left(); return false;">
-				<img src="arrow.svg" style="rotate: 90deg">
+				<img src="arrow.svg" style="transform: rotate(0.25turn)">
 			</a>
 			<span>&nbsp;</span>
 			<a href="#" id="right" onclick="slideControl.right(); return false;">
-				<img src="arrow.svg" style="rotate: 270deg">
+				<img src="arrow.svg" style="transform: rotate(0.75turn)">
 			</a>
 			<a href="#" id="prev" onclick="slideControl.prev(); return false;">
 				<img src="next.svg" style="rotate: 180deg;">
