Add remote zoom support

--- a/presentations/demo/index.html
+++ b/presentations/demo/index.html
@@ -451,7 +451,7 @@ Reveal.on( 'customevent', function() {
 		</div>
 
 		<script src="dist/reveal.js"></script>
-		<script src="plugin/zoom/zoom.js"></script>
+		<script src="../_remote/remotezoom.js"></script>
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/search/search.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
@@ -499,7 +499,7 @@ Reveal.on( 'customevent', function() {
 				},
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight, RevealRemote ]
+				plugins: [ RevealRemoteZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight, RevealRemote ]
 			});
 
 		</script>
